regression/fail/modules.44.sml
signature S =
   sig
      datatype t = T of 'a
   end
